# Slime

./: .gitignore  BLUEPRINT.md  BUGLIST.md  HEALING_PLAN.md  Makefile  README.md  buildplan.md  checkpoint.py  checkpoint_sample.json  compile.bat  compile_test.bat  cuda_fix.h  fix_cuda_sync.py  fix_unused_warnings.py  main.cu  pyproject.toml  remove_docstrings.py  run.py  slime_mold_triton_fixed.py  strip_docstrings.py  test_minimal.cu  urgent_fixes.py
.claude/: settings.local.json
.results_checkpoints/refs/: step_000001.ref  step_000006.ref  step_000011.ref  step_000016.ref  step_000021.ref  step_000026.ref  step_000031.ref  step_000036.ref  step_000041.ref  step_000046.ref  step_000051.ref  step_000056.ref  step_000061.ref  step_000066.ref  step_000071.ref  step_000076.ref  step_000081.ref  step_000086.ref  step_000091.ref  step_000096.ref  step_000101.ref  step_000106.ref  step_000111.ref  step_000116.ref  step_000121.ref  step_000126.ref  step_000131.ref  step_000136.ref  step_000141.ref  step_000146.ref  step_000151.ref  step_000156.ref  step_000161.ref  step_000166.ref  step_000171.ref  step_000176.ref  step_000181.ref  step_000186.ref  step_000191.ref  step_000196.ref  (+571 more)
.test_checkpoints/refs/: slime_tests_unit_test_archive_test_add_after_discovery_constraint.ref  slime_tests_unit_test_archive_test_add_before_discovery_errors_constraint.ref  slime_tests_unit_test_archive_test_archive_deterministic_across_operations_constraint.ref  slime_tests_unit_test_archive_test_behavioral_dimension_bounds_constraint.ref  slime_tests_unit_test_archive_test_centroid_determinism_constraint.ref  slime_tests_unit_test_archive_test_centroid_voronoi_partitioning_constraint.ref  slime_tests_unit_test_archive_test_content_addressable_deduplication_constraint.ref  slime_tests_unit_test_archive_test_dimension_discovery_constraint.ref  slime_tests_unit_test_archive_test_elite_replacement_consistency_constraint.ref  slime_tests_unit_test_archive_test_low_rank_compression_constraint.ref  slime_tests_unit_test_archive_test_metadata_preservation_constraint.ref  slime_tests_unit_test_archive_test_warmup_phase_constraint.ref  slime_tests_unit_test_archive_test_warmup_phase_errors_constraint.ref  slime_tests_unit_test_lifecycle_test_different_seeds_different_behavior.ref  slime_tests_unit_test_lifecycle_test_lifecycle_warmup_phase.ref  slime_tests_unit_test_lifecycle_test_seed_reproducibility.ref  slime_tests_unit_test_lifecycle_test_temperature_exponential_cooling.ref  slime_tests_unit_test_lifecycle_test_temperature_logarithmic_cooling.ref  slime_tests_unit_test_organism_test_organism_config_variants.ref  slime_tests_unit_test_organism_test_organism_deterministic_initialization.ref  (+112 more)
cuda_patches/include/: vector_types.h
docs/: GPU_NATIVE_IMPLEMENTATION.md  MODERNIZATION_ROADMAP.md  distance_metrics.md  p_adic_hierarchies.md  topology_integration_plan.md
failed_attempts/: archive.cu  chemotaxis.cu  component.cu  memory.cu  model.cu  pool.cu  pool_overcomplicated.cu  pseudopod.cu  tubes.cu  utils.cu  warp_ca.cu
slime/: __init__.py  extract_state.cu  runtime.cu
test_results/: test_run_20251012_033533.json  test_run_20251012_033603.json  test_run_20251012_034417.json  test_run_20251012_034442.json  test_run_20251012_034824.json  test_run_20251012_035606.json  test_run_20251012_035733.json  test_run_20251012_040656.json  test_run_20251012_041640.json  test_run_20251012_053625.json
(+889 files in other folders)
