[project]
name = "slime"
version = "0.1.0"
description = "Slime Mold Transformer - Quality-Diversity Neural Architecture"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "factor-analyzer>=0.4.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

# Type Checking Configuration (mypy)
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
no_implicit_optional = true

# Start permissive for existing code
disallow_untyped_defs = false
check_untyped_defs = true
disallow_any_generics = false

# Show error codes for easier silencing
show_error_codes = true
show_column_numbers = true
pretty = true

# Import discovery
namespace_packages = true
explicit_package_bases = true

# Incremental mode for performance
incremental = true
cache_dir = ".mypy_cache"

# Strict Type Checking for New Modules

# Effects module - STRICT (Phase 0)
[[tool.mypy.overrides]]
module = "slime.effects.*"
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_return_any = true
no_implicit_reexport = true
strict = true

# Topology module - STRICT (will be added in Phase 1-2)
[[tool.mypy.overrides]]
module = "slime.topology.*"
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_return_any = true
no_implicit_reexport = true
strict = true

# Test modules - STRICT for test_effects
[[tool.mypy.overrides]]
module = "slime.tests.unit.test_effects"
disallow_untyped_defs = true
check_untyped_defs = true

# Third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "factor_analyzer.*",
    "triton.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["slime/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, multiple components)",
    "slow: Slow tests (skip with -m 'not slow')",
    "gpu: Requires GPU (skip on CPU-only machines)",
]

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["slime"]
omit = [
    "*/tests/*",
    "*/bench/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
